# prompt-distill

./: .env.example  .gitignore  .skillignore  README.md  SKILL.md  pyproject.toml
.claude/: settings.local.json
Research/: instruction-following-benchmarks.md
Research/design/: skill-optimizer-design.md
Research/papers/: references.md
examples/: after-claude.md  before-claude.md
references/: compression-patterns.md  knowledge-tiers.md  model-defaults.md
scripts/: setup.bat  setup.sh  test.bat  test.sh  token_count.py
tests/: conftest.py  requirements.txt  test_compression_quality.py
